# quantum

./: .gitignore  .gitlab-ci.yml  README.md  bell_state.py  pyproject.toml  qzeno.py  requirements.txt  tasks.py  utils.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
experiments/: bell_state.py  qstates.py  qzeno.py  utils.py
tests/: test_bell_state.py  test_qstates.py  test_qzeno.py  test_utils.py
