[project]
name = "quantum_experiments"
version = "0.1.0"
description = "Quantum computing experiments"
authors = [{name = "Konstantin Vladimirov", email = "konstantin.vladimirov@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "qiskit==2.1.0",
    "qiskit_aer==0.17.1",
    "matplotlib==3.10.3",
    "numpy==2.2.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "invoke>=2.2",
    "pytest-cov>=4.2.0"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiments"]